# atlas-clean-code-april-2024

./: README.md
ArrayFiller/: main.cpp
NimGame/: CMakeLists.txt  main.cpp
NimGame/client/: GameClient.h
NimGame/game/: AbstractGame.h  Game.h
NimGame/game/nim/: NimGame.h
NimGame/game/nim/player/: AbstractNimGamePlayer.h  ComputerPlayer.h  HumanPlayer.h  OmaPlayer.h
NimGame/game/player/: AbstractPlayer.h  Player.h
NimGame/io/: ConsoleWriter.h  Writer.h
Schwein/: CMakeLists.txt  Schwein.h  main.cpp
VectorFillerUebung/: CMakeLists.txt  main.cpp
VectorFillerUebung/bootstrap/: Bootstrap.h
VectorFillerUebung/client/impl/: ClientImpl.h
VectorFillerUebung/collection/: VectorFactoryBuilder.h
VectorFillerUebung/collection/impl/parallel/: VectorFactoryAutoImpl.h  VectorFactoryParallelImpl.h
VectorFillerUebung/generator/impl/random/: MersenneTwisterNumberGeneratorFactory.h
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-gui/src/de/limago/: Fenster.java
